tests/core/snapshots/call-operator.md_10.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "news": {
            "news": [
              {
                "id": 1
              },
              {
                "id": 2
              }
            ]
          }
        }
      ]
    }
  }
}
