tests/core/snapshots/call-operator.md_11.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "newsWithPortArg": {
            "news": [
              {
                "id": 1
              },
              {
                "id": 2
              }
            ]
          }
        }
      ]
    }
  }
}
