tests/core/snapshots/call-operator.md_3.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "userGraphQLHeaders": {
            "name": "Leanne Graham"
          }
        }
      ]
    }
  }
}
