tests/core/snapshots/call-operator.md_7.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "userPosts": [
        {
          "title": "bar"
        },
        {
          "title": "qux"
        }
      ]
    }
  }
}
