tests/core/snapshots/call-operator.md_8.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "userWithPosts": {
        "posts": [
          {
            "title": "bar"
          },
          {
            "title": "qux"
          }
        ]
      }
    }
  }
}
