tests/core/snapshots/call-operator.md_9.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "news": {
        "news": [
          {
            "id": 1
          },
          {
            "id": 2
          }
        ]
      }
    }
  }
}
